--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -22,10 +22,10 @@ jobs:
         python-version: "3.10"
     - name: Create virtual enviroment
       run: |
-        py -m venv env
+        python -m venv env
         .\env\Scripts\activate
     - name: Install dependencies
       run: |
-        pip install --upgrade pip
+        python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         pip-upgrade
