--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,4 +24,4 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        pip-upgrade
+        pip-upgrade --novenv
