--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -29,4 +29,4 @@ jobs:
         pip-upgrade --novenv -y
     - name: Run proyect main
       run: |
-        if [ -f src\main.py ]; then py .\src\main.py; fi
+        python .\src\main.py
